  bios/screen.c bios/vt52.c cli/command.c desk/desk_rsc.c desk/deskmain.c
  desk/deskobj.c include/compat.h include/version.h tools/version.sed: Added
  the const attribute to constant arrays so they moved to the TEXT segment. The
  DATA segment (which is still incorrectly read-only) is now empty. (VRI)
- desk/desksupp.c: Fixed desktop crash when opening a folder that has a
  pathname exactly (LEN_ZPATH-LEN_ZFNAME) bytes long. (RFB)
- desk/deskfpd.c desk/desksupp.c: Fixed incorrect pathname length check
  that caused some valid pathnames to be disallowed. (RFB)
- aes/gemfslib.c bdos/fsdir.c: Replaced more occurrences of "magic numbers"
  for maximum pathname length with centralised #defines. (RFB)

2011-11-12
- Makefile bios/bios.c bios/startup.S include/config.h: New target "make cart"
  to build a diagnostic cartridge into etoscart.img. (VRI)
- bios/bios.c bios/startup.S: Renamed cartscan() to run_cartridge_applications()
  and improved application cartridge comments. (VRI)

2011-11-14
- Makefile: Now "make 192" and "make 256" get the right compile options and
  produce the expected filename. Override the language with UNIQUE=xx. (VRI)

2011-11-19
- bios/asmdefs.h: Moved to include/. (VRI)
- */*.c */*.S: Included config.h at the top of every .c file and asmdefs.h at
  the top of every .S file. (VRI)
- Makefile: Simplified building the dirs list according to the features. (VRI)
- bios/bios.c bios/startup.S cli/coma.S: Added the ability to compile with both
  WITH_AES=0 and WITH_CLI=0. Such ROM is still able to run AUTO and bootstrap
  programs. (VRI)
- Makefile: Removed now useless ROMSIZE autodetection. (VRI)
- Makefile: Beautified the compile command line. (VRI)
- Makefile: Added the ROMSIZE define, in kilobytes. (VRI)
- Makefile desk/desk1.c include/config.h: Moved the definition of DESK1 to
  config.h. (VRI)
- Makefile include/config.h: Moved the special TOS_VERSION for 192 KB ROMs into
  config.h. (VRI)